--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     <section class="s-top" style="background-color: #292929;height:80px;">
         <div class="container ">
             <div class="row pt-2">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 d-none d-sm-block"
+                    style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
                     <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
@@ -116,9 +117,11 @@
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="background-color: #292929; color:#afafaf">
                     <div class="login-top">
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><a><i class="fas fa-key"></i> Sign up</a></button>
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal"
+                            data-target="#myModal"><a><i class="fas fa-key"></i> Sign up</a></button>
 
-                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#mymodal"><a><i class="fas fa-key"></i> Login</a></button>
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal"
+                            data-target="#mymodal"><a><i class="fas fa-key"></i> Login</a></button>
                     </div>
                 </div>
             </div>
@@ -155,7 +158,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none" href="#"><img src="images/logo/logobookstore.jpg" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -169,7 +174,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -486,7 +492,8 @@
                                     <a href="./product/product5.html">
                                         <img src="images/product/h5.jpeg" class="card-img-top" alt="...">
                                         <div class="info-product">
-                                            <h5 style="text-align: center; margin-top:10px;">Bí mật tài chính người giàu (Tập 2)</h5>
+                                            <h5 style="text-align: center; margin-top:10px;">Bí mật tài chính người giàu
+                                                (Tập 2)</h5>
                                             <div class="price">
                                                 <span>63.000 <sup>đ</sup></span>
                                             </div>
@@ -514,7 +521,8 @@
                                     <a href="./product/product7.html">
                                         <img src="images/product/h7.jpeg" class="card-img-top" alt="...">
                                         <div class="info-product">
-                                            <h5 style="text-align: center; margin-top:10px;">Các Chòm Sao: Toàn Cảnh Về Bầu trời đêm</h5>
+                                            <h5 style="text-align: center; margin-top:10px;">Các Chòm Sao: Toàn Cảnh Về
+                                                Bầu trời đêm</h5>
                                             <div class="price">
                                                 <span>152.000 <sup>đ</sup></span>
                                             </div>
@@ -607,7 +615,8 @@
                                         <a href="./product/product11.html">
                                             <img src="images/product/h11.jpeg" class="card-img-top" alt="...">
                                             <div class="info-product">
-                                                <h5 style="text-align: center; margin-top:10px;">Tôi quyết định sống cho chính tôi</h5>
+                                                <h5 style="text-align: center; margin-top:10px;">Tôi quyết định sống cho
+                                                    chính tôi</h5>
                                                 <div class="price" style="text-align: center;">
                                                     <span>64.200 <sup>đ</sup></span>
                                                 </div>
@@ -722,7 +731,8 @@
             <div class="row">
                 <div class="col-12 col-xs-3 col-sm-3 col-md-3 col-lg-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;">
+                        <h3
+                            style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;">
                             <u id="au">About Us</u>
                         </h3>
                         <div class="imglogo">
@@ -730,7 +740,9 @@
                         </div>
                         <p style="margin-top: 20px; ">Welcome To Our Store</p>
                         <p>
-                            Thương hiệu sách Books Store là địa chỉ tin cậy cho các tác giả trẻ Việt Nam gửi gắm tác phẩm của mình. Hãy để BookStore trở thành người đưa đứa con tinh thần của bạn đến với công chúng!
+                            Thương hiệu sách Books Store là địa chỉ tin cậy cho các tác giả trẻ Việt Nam gửi gắm tác
+                            phẩm của mình. Hãy để BookStore trở thành người đưa đứa con tinh thần của bạn đến với công
+                            chúng!
                         </p>
                     </div>
                 </div>
@@ -793,31 +805,36 @@
                             <div class="form-group">
                                 <label class="label-control col-xs-12 col-sm-12 col-md-12 col-lg-12">User Name</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="text" placeholder="ducanh001" class="form-control" id="txtname" onblur="testTen()"> <span id="er1">*</span>
+                                    <input type="text" placeholder="ducanh001" class="form-control" id="txtname"
+                                        onblur="testTen()"> <span id="er1">*</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="label-control col-xs-3 col-sm-3 col-md-3 col-lg-3">PassWord</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="password" id="txtpass" onblur="testpass()" class="form-control"><span id="er2">*</span>
+                                    <input type="password" id="txtpass" onblur="testpass()" class="form-control"><span
+                                        id="er2">*</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="label-control col-xs-5 col-sm-5 col-md-5 col-lg-5">Enter PassWord</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="password" id="txtpass2" onblur="testepass()" class="form-control"><span id="er3">*</span>
+                                    <input type="password" id="txtpass2" onblur="testepass()" class="form-control"><span
+                                        id="er3">*</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="label-control col-xs-3 col-sm-3 col-md-3 col-lg-3">Email</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="email" id="txtemail" onblur="testmail()" class="form-control" placeholder="ducanh06092001@gmail.com"> <span id="er4">*</span>
+                                    <input type="email" id="txtemail" onblur="testmail()" class="form-control"
+                                        placeholder="ducanh06092001@gmail.com"> <span id="er4">*</span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="label-control col-xs-3 col-sm-3 col-md-3 col-lg-3">Phone</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="tel" id="txtphone" onblur="testphone()" class="form-control"> <span id="er5">*</span>
+                                    <input type="tel" id="txtphone" onblur="testphone()" class="form-control"> <span
+                                        id="er5">*</span>
                                 </div>
                             </div>
                             <div class="form-group">
