--- a/product/product11.html
+++ b/product/product11.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h11.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h11.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,10 +135,17 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        Tôi quyết định sống cho chính tôi<br /> Cuốn sách đạt giải thưởng “Cuốn sách của năm” vào năm 2017. Đã tái bản hơn 100 lần kể từ lần xuất bản đầu tiên vào năm 2016. Được nhiều nghệ sĩ chọn đọc và giới thiệu đến các fan của mình,
-                        đơn cử là JungKook (BTS). Như tác giả Kim Suhyun đã chia sẻ:những điều quan trọng nhất trong cuộc sống như: Công việc, các mối quan hệ, niềm vui, tinh thần, thể chất, sức khỏe… Tôi đã không lường trước những việc có thể xảy ra
-                        . Mà tôi chỉ làm (Do) những việc tôi muốn (Want) và có thể (Can). Một công thức đơn giản là Want + Can = Do Thay vào đó, hãy làm việc chăm chỉ. Tôi dần tránh những mối quan hệ chỉ nhấn chìm tôi hoặc không quan trọng với tôi và
-                        tự nhủ rằng tôi sẽ không cho phép bản thân làm bất kể điều gì một cách tùy tiện nữa. Tôi dành thời gian tìm kiếm niềm vui trong cuộc sống...
+                        Tôi quyết định sống cho chính tôi<br /> Cuốn sách đạt giải thưởng “Cuốn sách của năm” vào năm
+                        2017. Đã tái bản hơn 100 lần kể từ lần xuất bản đầu tiên vào năm 2016. Được nhiều nghệ sĩ chọn
+                        đọc và giới thiệu đến các fan của mình,
+                        đơn cử là JungKook (BTS). Như tác giả Kim Suhyun đã chia sẻ:những điều quan trọng nhất trong
+                        cuộc sống như: Công việc, các mối quan hệ, niềm vui, tinh thần, thể chất, sức khỏe… Tôi đã không
+                        lường trước những việc có thể xảy ra
+                        . Mà tôi chỉ làm (Do) những việc tôi muốn (Want) và có thể (Can). Một công thức đơn giản là Want
+                        + Can = Do Thay vào đó, hãy làm việc chăm chỉ. Tôi dần tránh những mối quan hệ chỉ nhấn chìm tôi
+                        hoặc không quan trọng với tôi và
+                        tự nhủ rằng tôi sẽ không cho phép bản thân làm bất kể điều gì một cách tùy tiện nữa. Tôi dành
+                        thời gian tìm kiếm niềm vui trong cuộc sống...
                     </p>
                 </details>
             </div>
@@ -148,7 +159,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
