--- a/product/product15.html
+++ b/product/product15.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h15.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h15.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,9 +135,14 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        Rất nhiều rất nhiều năm sau, những người đã từng chứng kiến cảnh tưởng này vẫn còn nhớ như in. Truyền thuyết lan truyền khắp Địa Trung Hải, một thiếu niên da trắng nõn như hải yêu nổi lên trên mặt nước, vung lưỡi hái thu gặt sinh mệnh, đôi mắt đen láy
-                        như bầu trời đêm không trăng không Một thiếu nữ thần bí vung thanh lưỡi hái, hô hoán mưa máu gió tanh; Bậc đế vương hùng mạnh ở chốn hoang dã, hải tặc giữa giới quý tộc, đóa hoa nở giữa nơi tăm tối của cái ác. Từ đây, lá cờ đầu
-                        lâu và thanh đao cong của vua hải tặc tung hoanh khắp Địa Trung Hải. Từ khoảnh khắc cô và hắn gặp nhau, một thời địa cướp biển nắm giữ thế giới bắt đầu mở ra.
+                        Rất nhiều rất nhiều năm sau, những người đã từng chứng kiến cảnh tưởng này vẫn còn nhớ như in.
+                        Truyền thuyết lan truyền khắp Địa Trung Hải, một thiếu niên da trắng nõn như hải yêu nổi lên
+                        trên mặt nước, vung lưỡi hái thu gặt sinh mệnh, đôi mắt đen láy
+                        như bầu trời đêm không trăng không Một thiếu nữ thần bí vung thanh lưỡi hái, hô hoán mưa máu gió
+                        tanh; Bậc đế vương hùng mạnh ở chốn hoang dã, hải tặc giữa giới quý tộc, đóa hoa nở giữa nơi tăm
+                        tối của cái ác. Từ đây, lá cờ đầu
+                        lâu và thanh đao cong của vua hải tặc tung hoanh khắp Địa Trung Hải. Từ khoảnh khắc cô và hắn
+                        gặp nhau, một thời địa cướp biển nắm giữ thế giới bắt đầu mở ra.
                     </p>
                 </details>
             </div>
@@ -146,7 +155,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
