--- a/product/product2.html
+++ b/product/product2.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -114,7 +117,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h2.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h2.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -132,11 +136,20 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        NHỮNG THỨ GIÁ TRỊ THÌ KHÔNG ỒN ÀO<br /> Đại bàng một mình bay lượn trên những tầng mây, lũ gà thì kêu quang quác dưới mặt đất. Những tờ tiền giấy nhẹ bẫng nhưng mua được nhiều thứ hơn đống tiền xu leng keng. Những người giản dị
-                        và khiêm tốn tạo ra nhiều giá trị xã hội hơn những kẻ ba hoa. Ồn ào là âm thanh của cuộc sống hiện đại tôn sùng vật chất và hư danh. Sống giữa ồn ào, con người khó mà tĩnh lặng. Khi tâm trí xao động, hỗn loạn, con người sẽ dễ dàng
-                        nổi nóng, đưa ra những quyết định sai lầm, dễ sinh bệnh tật, tự tổn thương chính mình. Vậy thì, hãy tự cho bản thân những giây phút lặng yên để: Hít sâu và thở chậm - để cảm nhận sự hiện diện của thực tại, để không lạc lối vì mải
-                        chạy theo những điều phù phiếm. Đọc thật chậm và chiêm nghiệm những câu chữ đẹp đẽ - để có tư duy sâu sắc và sự đồng cảm đáng quý hơn khi chỉ đọc qua loa vài dòng status trên mạng. Ôm lấy cơ thể và lắng nghe trái tim mình - để
-                        thấu hiểu và yêu thương bản thân nhiều hơn, để không bỏ mặc chính mình vì không biết “tôi là ai”...
+                        NHỮNG THỨ GIÁ TRỊ THÌ KHÔNG ỒN ÀO<br /> Đại bàng một mình bay lượn trên những tầng mây, lũ gà
+                        thì kêu quang quác dưới mặt đất. Những tờ tiền giấy nhẹ bẫng nhưng mua được nhiều thứ hơn đống
+                        tiền xu leng keng. Những người giản dị
+                        và khiêm tốn tạo ra nhiều giá trị xã hội hơn những kẻ ba hoa. Ồn ào là âm thanh của cuộc sống
+                        hiện đại tôn sùng vật chất và hư danh. Sống giữa ồn ào, con người khó mà tĩnh lặng. Khi tâm trí
+                        xao động, hỗn loạn, con người sẽ dễ dàng
+                        nổi nóng, đưa ra những quyết định sai lầm, dễ sinh bệnh tật, tự tổn thương chính mình. Vậy thì,
+                        hãy tự cho bản thân những giây phút lặng yên để: Hít sâu và thở chậm - để cảm nhận sự hiện diện
+                        của thực tại, để không lạc lối vì mải
+                        chạy theo những điều phù phiếm. Đọc thật chậm và chiêm nghiệm những câu chữ đẹp đẽ - để có tư
+                        duy sâu sắc và sự đồng cảm đáng quý hơn khi chỉ đọc qua loa vài dòng status trên mạng. Ôm lấy cơ
+                        thể và lắng nghe trái tim mình - để
+                        thấu hiểu và yêu thương bản thân nhiều hơn, để không bỏ mặc chính mình vì không biết “tôi là
+                        ai”...
                     </p>
                 </details>
             </div>
@@ -148,7 +161,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
