--- a/product/product7.html
+++ b/product/product7.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h7.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h7.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,10 +135,17 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        "Các chòm sao: Toàn cảnh về bầu trời đêm"<br /> cuốn sách giá trị cho người đam mê khoa học và yêu thích bầu trời đêm. Không có bất cứ tài liệu nào có thể khẳng định chính xác xem liệu rằng từ khi nào con người đã bắt đầu quan
-                        sát bầu trời đêm. Đó có thể là thời điểm sơ khai của tổ chức xã hội loài người, hay từ những tổ tiên xa xôi hàng triệu hoặc hàng chục triệu năm trước. Nhưng có một điều chắc chắn là từ khi con người bắt đầu tìm hiểu và ghi nhận
-                        các quy luật của thế giới tự nhiên, thì bầu trời là một trong những đối tượng thu hút được nhiều sự chú ý nhất... Bầu trời sẽ chẳng đáng nhận được quá nhiều sự chú ý nếu nó luôn chỉ có một màu xanh duy nhất và bất động. Nó cuốn
-                        hút con người bởi có chuyển động của Mặt Trời, Mặt Trăng, các đám mây, và hiển nhiên là cả hàng nghìn ngôi sao mà bạn có thể thấy mỗi đêm.
+                        "Các chòm sao: Toàn cảnh về bầu trời đêm"<br /> cuốn sách giá trị cho người đam mê khoa học và
+                        yêu thích bầu trời đêm. Không có bất cứ tài liệu nào có thể khẳng định chính xác xem liệu rằng
+                        từ khi nào con người đã bắt đầu quan
+                        sát bầu trời đêm. Đó có thể là thời điểm sơ khai của tổ chức xã hội loài người, hay từ những tổ
+                        tiên xa xôi hàng triệu hoặc hàng chục triệu năm trước. Nhưng có một điều chắc chắn là từ khi con
+                        người bắt đầu tìm hiểu và ghi nhận
+                        các quy luật của thế giới tự nhiên, thì bầu trời là một trong những đối tượng thu hút được nhiều
+                        sự chú ý nhất... Bầu trời sẽ chẳng đáng nhận được quá nhiều sự chú ý nếu nó luôn chỉ có một màu
+                        xanh duy nhất và bất động. Nó cuốn
+                        hút con người bởi có chuyển động của Mặt Trời, Mặt Trăng, các đám mây, và hiển nhiên là cả hàng
+                        nghìn ngôi sao mà bạn có thể thấy mỗi đêm.
                     </p>
                 </details>
             </div>
@@ -148,7 +159,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
