--- a/product/product12.html
+++ b/product/product12.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h12.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h12.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,9 +135,15 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        The magic<br /> Trong suốt hơn 20 thế kỷ qua, những lời dạy trong các văn bản linh thiêng cổ xưa đã khiến hầu hết mọi người hiểu nhầm. Chỉ có một số ít người trong lịch sử có thể nhận ra rằng nó thật ra là một câu đố, và một khi
-                        đã giải được ẩn ý trong câu đố ấy - để vén bức màn bí mật - một thế giới hoàn toàn mới sẽ xuất hiện trước mắt bạn. Trong quyển sách phép màu, Rhonda Byrne đã tiết lộ bí mật đầy quyền năng này cho cả thế giới. Và sau đó, với hành
-                        trình 28 ngày nhiệm màu, cô ấy hướng dẫn chúng ta phương pháp ứng dụng kiến thức này vào cuộc sống thường nhật. Bất kể bạn là ai, bất kể bạn ở đâu, bất kể tình huống hiện tại của bạn là gì, phép màu sẽ thay đổi hoàn toàn cuộc sống
+                        The magic<br /> Trong suốt hơn 20 thế kỷ qua, những lời dạy trong các văn bản linh thiêng cổ xưa
+                        đã khiến hầu hết mọi người hiểu nhầm. Chỉ có một số ít người trong lịch sử có thể nhận ra rằng
+                        nó thật ra là một câu đố, và một khi
+                        đã giải được ẩn ý trong câu đố ấy - để vén bức màn bí mật - một thế giới hoàn toàn mới sẽ xuất
+                        hiện trước mắt bạn. Trong quyển sách phép màu, Rhonda Byrne đã tiết lộ bí mật đầy quyền năng này
+                        cho cả thế giới. Và sau đó, với hành
+                        trình 28 ngày nhiệm màu, cô ấy hướng dẫn chúng ta phương pháp ứng dụng kiến thức này vào cuộc
+                        sống thường nhật. Bất kể bạn là ai, bất kể bạn ở đâu, bất kể tình huống hiện tại của bạn là gì,
+                        phép màu sẽ thay đổi hoàn toàn cuộc sống
                         của bạn!
                     </p>
                 </details>
@@ -146,7 +156,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
