--- a/product/product3.html
+++ b/product/product3.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h3.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h3.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,9 +135,15 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        Chúng ta thường đặt câu hỏi: “Tại sao người giàu ngày càng giàu?”. Hầu như không phải do may mắn. Không phải vì nơi họ sinh ra và cũng không phải vì họ thắng xổ số. Chỉ là người giàu làm mọi thứ theo một cách khác. Họ nghĩ khác, họ hành động khác và họ
-                        có những thói quen khác. Có câu ngạn ngữ: “Cho một người một con cá giúp anh ấy ấm bụng một ngày. Dạy một người cách câu cá giúp họ ấm bụng cả đời”. Cuốn sách “Sự khác biệt giữa người giàu và người nghèo” giúp bạn phát triển các
-                        thói quen giàu có và loại bỏ thói quen nghèo khó. Khi bạn làm những việc mà người giàu có và thành công làm, khi bạn suy nghĩ giống họ, khi bạn hành động như họ, bạn sẽ bắt đầu có được những kết quả giống họ và trở nên giàu có.
+                        Chúng ta thường đặt câu hỏi: “Tại sao người giàu ngày càng giàu?”. Hầu như không phải do may
+                        mắn. Không phải vì nơi họ sinh ra và cũng không phải vì họ thắng xổ số. Chỉ là người giàu làm
+                        mọi thứ theo một cách khác. Họ nghĩ khác, họ hành động khác và họ
+                        có những thói quen khác. Có câu ngạn ngữ: “Cho một người một con cá giúp anh ấy ấm bụng một
+                        ngày. Dạy một người cách câu cá giúp họ ấm bụng cả đời”. Cuốn sách “Sự khác biệt giữa người giàu
+                        và người nghèo” giúp bạn phát triển các
+                        thói quen giàu có và loại bỏ thói quen nghèo khó. Khi bạn làm những việc mà người giàu có và
+                        thành công làm, khi bạn suy nghĩ giống họ, khi bạn hành động như họ, bạn sẽ bắt đầu có được
+                        những kết quả giống họ và trở nên giàu có.
                         Vì sao người giàu ngày càng giàu hơn?...
                     </p>
                 </details>
@@ -148,7 +158,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
