--- a/product/product4.html
+++ b/product/product4.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h4.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h4.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,11 +135,20 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        <b>Marketing Online 4.0</b><br /> Những năm trước đây, đa số các doanh nghiệp Việt Nam hạn hẹp về tài chính, hạn chế về tầm nhìn và vẫn còn ảnh hưởng của tư duy kinh tế thời bao cấp (đặc biệt là có nhiều doanh nghiệp khối nhà nước)
-                        nên công việc Marketing chưa được quan tâm đúng mức. Thực tế đáng buồn là có nhiều doanh nghiệp chỉ coi Marketing như là một công cụ hỗ trợ nhằm bán được hàng hoặc cung cấp được nhiều dịch vụ, hoặc đó là làm quảng cáo, hay làm
-                        truyền thông thay vì coi Marketing và Marketing Online là định hướng chiến lược cạnh tranh của doanh nghiệp, một phần rất quan trọng của doanh nghiệp để giúp thương hiệu bay xa, doanh số bay cao, khách hàng hài lòng và thỏa mãn.
-                        Một thực tế khác nữa, cũng có nhiều doanh nghiệp Việt Nam thiếu tự tin với lý do như doanh nghiệp nhỏ, thương hiệu mới, khả năng tài chính eo hẹp, cách làm ăn chộp giật, làm kiểu ăn đong - bóc ngắn cắn dài, nên đôi khi cũng chẳng
-                        có điều kiện để mà làm Marketing hay Marketing Online. Hành vi của khách hàng thì đã thay đổi rất nhiều.
+                        <b>Marketing Online 4.0</b><br /> Những năm trước đây, đa số các doanh nghiệp Việt Nam hạn hẹp
+                        về tài chính, hạn chế về tầm nhìn và vẫn còn ảnh hưởng của tư duy kinh tế thời bao cấp (đặc biệt
+                        là có nhiều doanh nghiệp khối nhà nước)
+                        nên công việc Marketing chưa được quan tâm đúng mức. Thực tế đáng buồn là có nhiều doanh nghiệp
+                        chỉ coi Marketing như là một công cụ hỗ trợ nhằm bán được hàng hoặc cung cấp được nhiều dịch vụ,
+                        hoặc đó là làm quảng cáo, hay làm
+                        truyền thông thay vì coi Marketing và Marketing Online là định hướng chiến lược cạnh tranh của
+                        doanh nghiệp, một phần rất quan trọng của doanh nghiệp để giúp thương hiệu bay xa, doanh số bay
+                        cao, khách hàng hài lòng và thỏa mãn.
+                        Một thực tế khác nữa, cũng có nhiều doanh nghiệp Việt Nam thiếu tự tin với lý do như doanh
+                        nghiệp nhỏ, thương hiệu mới, khả năng tài chính eo hẹp, cách làm ăn chộp giật, làm kiểu ăn đong
+                        - bóc ngắn cắn dài, nên đôi khi cũng chẳng
+                        có điều kiện để mà làm Marketing hay Marketing Online. Hành vi của khách hàng thì đã thay đổi
+                        rất nhiều.
                     </p>
                 </details>
             </div>
@@ -149,7 +162,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
