--- a/product/product5.html
+++ b/product/product5.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h5.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h5.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,10 +135,17 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        BÍ MẬT TÀI CHÍNH NGƯỜI GIÀU LÀM THUÊ HAY KHỞI NGHIỆP<br /> “Tôi muốn trao cho bạn một câu chuyện có thể tạo bước ngoặt lớn trong cuộc đời. Đó là tương lai, đó là khát vọng tìm thấy cuộc sống thực sự. Có người đọc xong sẽ nói đây
-                        là một câu chuyện hư cấu và vớ vẩn. Tốt thôi, không sao cả vì Trái đất vẫn quay. Có người đọc xong sẽ thấy hạnh phúc, hào hứng và nhận ra cuộc sống rất nhiều ý nghĩa, có quá nhiều thứ để làm. Sau đó họ sống một cuộc đời nhiệt huyết
-                        và tận hưởng hạnh phúc, thành công, giàu có.” Cuốn sách là một “bản hướng dẫn” làm thế nào để thành công và giàu có. “BÍ MẬT TÀI CHÍNH NGƯỜI GIÀU-LÀM THUÊ HAY KHỞI NGHIỆP” đưa ra một quan điểm rất cởi mở: Đại học không phải là
-                        con đường duy nhất giúp bạn thành công, thậm chí “mạnh bạo” hơn là: Muốn làm chủ thì đừng học Đại học!..
+                        BÍ MẬT TÀI CHÍNH NGƯỜI GIÀU LÀM THUÊ HAY KHỞI NGHIỆP<br /> “Tôi muốn trao cho bạn một câu chuyện
+                        có thể tạo bước ngoặt lớn trong cuộc đời. Đó là tương lai, đó là khát vọng tìm thấy cuộc sống
+                        thực sự. Có người đọc xong sẽ nói đây
+                        là một câu chuyện hư cấu và vớ vẩn. Tốt thôi, không sao cả vì Trái đất vẫn quay. Có người đọc
+                        xong sẽ thấy hạnh phúc, hào hứng và nhận ra cuộc sống rất nhiều ý nghĩa, có quá nhiều thứ để
+                        làm. Sau đó họ sống một cuộc đời nhiệt huyết
+                        và tận hưởng hạnh phúc, thành công, giàu có.” Cuốn sách là một “bản hướng dẫn” làm thế nào để
+                        thành công và giàu có. “BÍ MẬT TÀI CHÍNH NGƯỜI GIÀU-LÀM THUÊ HAY KHỞI NGHIỆP” đưa ra một quan
+                        điểm rất cởi mở: Đại học không phải là
+                        con đường duy nhất giúp bạn thành công, thậm chí “mạnh bạo” hơn là: Muốn làm chủ thì đừng học
+                        Đại học!..
                     </p>
                 </details>
             </div>
@@ -148,7 +159,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
