--- a/product/product9.html
+++ b/product/product9.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6 d-none d-sm-block" style="background-color: #292929; color:#afafaf">
                     <span>Welcome to <span style="color: #ffc82e;">Books Store</span></span>
                     &#124;
-                    <span>Hotline: <span style="color: #ffc82e;">0384553256</span></span>
+                    <span>Hotline: <span style="color: #ffc82e;">0369172647</span></span>
 
                 </div>
                 <div class="col-md-6" style="background-color: #292929; color:#afafaf">
@@ -68,7 +68,9 @@
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand d-md-none"><img src="../images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -82,7 +84,8 @@
                             <a class="nav-link" href="#au">About</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Products
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -113,7 +116,8 @@
     <section class="container">
         <div class="row pt-5" style="min-height: 710px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h9.jpeg" alt="..." style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
+                <img class="col-4 col-xs-12 col-sm-12 col-md-12 col-lg-12" src="../images/product/h9.jpeg" alt="..."
+                    style="border:5px double #ffc82e;padding:30px 0px 30px 0px;border-radius:20px;margin-left:100px;width:90%">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
 
@@ -131,10 +135,17 @@
                 <details open>
                     <summary>Mô tả sản phẩm</summary>
                     <p>
-                        Muôn Kiếp Nhân Sinh<br /> Cung cấp cho bạn đọc kho kiến thức mới mẻ, vô tận của nhân loại lần đầu được hé mở, cùng những phân tích uyên bác, tiên đoán bất ngờ về hiện tại và tương lai thế giới của những bậc hiền triết thông thái.
-                        Thông điệp quan trọng xuyên suốt của tác phẩm thức tỉnh con người chính là nguồn gốc và cách thức vận hành luật Nhân quả và Luân hồi của vũ trụ. Đời người tưởng chừng rất dài nhưng lại trôi qua rất nhanh, sinh vượng suy tử, mong
-                        manh như sóng nước. Luật Nhân quả cực kỳ chính xác, chi tiết, phức tạp, được thu thập qua nhiều đời, nhiều kiếp, liên hệ tương hỗ đan xen chặt chẽ lẫn nhau, không ai có thể tính được tích đức này có thể trừ được nghiệp kia, không
-                        ai có thể biết được khi nào nhân sẽ trổ quả. Nhưng, một khi đã gây ra nhân thì chắc chắn sẽ gặt quả - luật Nhân quả trước giờ không bao giờ sai.
+                        Muôn Kiếp Nhân Sinh<br /> Cung cấp cho bạn đọc kho kiến thức mới mẻ, vô tận của nhân loại lần
+                        đầu được hé mở, cùng những phân tích uyên bác, tiên đoán bất ngờ về hiện tại và tương lai thế
+                        giới của những bậc hiền triết thông thái.
+                        Thông điệp quan trọng xuyên suốt của tác phẩm thức tỉnh con người chính là nguồn gốc và cách
+                        thức vận hành luật Nhân quả và Luân hồi của vũ trụ. Đời người tưởng chừng rất dài nhưng lại trôi
+                        qua rất nhanh, sinh vượng suy tử, mong
+                        manh như sóng nước. Luật Nhân quả cực kỳ chính xác, chi tiết, phức tạp, được thu thập qua nhiều
+                        đời, nhiều kiếp, liên hệ tương hỗ đan xen chặt chẽ lẫn nhau, không ai có thể tính được tích đức
+                        này có thể trừ được nghiệp kia, không
+                        ai có thể biết được khi nào nhân sẽ trổ quả. Nhưng, một khi đã gây ra nhân thì chắc chắn sẽ gặt
+                        quả - luật Nhân quả trước giờ không bao giờ sai.
                     </p>
                 </details>
             </div>
@@ -148,7 +159,8 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="logofooter">
-                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;" id="au"><u>About Us</u></h3>
+                        <h3 style="color:white;; margin-top: 30px;text-transform: uppercase;font-family: Georgia, 'Times New Roman', Times, serif;"
+                            id="au"><u>About Us</u></h3>
                         <div class="imglogo">
                             <img src="../images/logo/logobookstore.jpg" alt=" logo ">
                         </div>
